# open-terminal

./: .gitignore  AGENT.md  AGENTS_AS_APPS.md  ARCHITECTURE.md  CAPABILITY.toml  INDUCTION-ANALYSIS.md  INTEGRATION.md  MERGE-STRATEGY.md  MIGRATION-ANALYSIS.md  README.md  THREE_LAYER_ARCHITECTURE.md  TRIPARTITE-MAP.md
.claude/: settings.json
.github/actions/spelling/expect/: expect.txt
docs/: CONTRIBUTING.md  CORRECTED_MODEL.md  FUTURE-INTEGRATION.md  HARNESS_ARCHITECTURE.md  METAL_LIBRARY_INTEGRATION.md  TRENDING_HARNESS.md
memory/: JOURNAL.md
src/cascadia/CascadiaPackage/: CascadiaPackage.wapproj  Package-Dev.appxmanifest
src/cascadia/TerminalApp/: AppActionHandlers.cpp  Pane.cpp  Pane.h  Tab.cpp  TerminalPage.cpp  TerminalPage.h
src/cascadia/TerminalSettingsEditor/: AIAgents.xaml  AIAgentsViewModel.cpp  AIAgentsViewModel.h  AIAgentsViewModel.idl
src/cascadia/WindowsTerminal/: ProtocolRequestHandler.cpp  TerminalProtocolComServer.cpp
src/renderer/: agent_overlay.rs
tools/wta/: Cargo.toml  README.md  stub_win_locale.c  test_math_only.sh
tools/wta/locales/: en-US.yml
tools/wta/src/: agent_check.rs  app.rs  main.rs  runtime_paths.rs  ternary_integration.rs  trending_harness.rs
tools/wta/src/agent/: command_suggest.rs  conservation_monitor.rs  mod.rs
tools/wta/src/context_trigger/: autoconfig.rs  dormant.rs  mod.rs  triggers.rs
tools/wta/src/forecast/: anomaly.rs  mod.rs  predictor.rs  resource_predictor.rs  transition_matrix.rs
tools/wta/src/griot_history/: adinkra.rs  decay.rs  mod.rs  pattern.rs  persistence.rs
tools/wta/src/griot_history/skill_detector/: coarse_grain.rs  fixed_point.rs  mod.rs  suggestion.rs  universality.rs
tools/wta/src/master/: mod.rs
tools/wta/src/math_analysis/: command_markov.rs  error_hodge.rs  mod.rs  spectral_dashboard.rs  verification_entropy.rs
tools/wta/src/module_system/: builtin_modules.rs  memory_budget.rs  mod.rs  module_context.rs  module_output.rs
tools/wta/src/protocol/acp/: client.rs  spawn.rs
tools/wta/src/ui/: agent_disagreement.rs  entropy_bar.rs  layout.rs  mod.rs
wta/: AGENTS.md  OVERVIEW.md  PLAN.md  README.md
wta/src/: app.rs  auth.rs  main.rs  shared_host.rs
wta/src/ui/: chat.rs  layout.rs
