[package]
name = "wta"
version = "0.1.0"
edition = "2021"
description = "Windows Terminal Agent — ACP TUI client / MCP tool server"
build = "build.rs"

[[bin]]
name = "wta"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "0.10", features = ["unstable_session_model", "unstable_session_list"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
unicode-width = "0.2"
textwrap = "0.16"
serde = { version = "1", features = ["derive"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
# Microsoft's official ETW TraceLogging crate. Emits byte-identical events to
# the C++ TraceLoggingWrite() macros — see src/cascadia/TerminalApp/init.cpp
# for the matching provider GUID and src/cascadia/TerminalApp/AppLogic.cpp
# for the event-emission style we mirror here.
tracelogging = "1"
which = "7"
rust-i18n = "3"
sys-locale = "0.3"
nalgebra = { version = "0.33", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tempfile = { version = "3", optional = true }

# SuperInstance metal library fleet — the terminal is their harness
spectral-graph-agent = { git = "https://github.com/SuperInstance/spectral-graph-agent-rs", optional = true }
conservation-spectral-topology = { git = "https://github.com/SuperInstance/conservation-spectral-topology-rs", optional = true }
sheaf-agents = { git = "https://github.com/SuperInstance/sheaf-agents-rs", optional = true }
hodge-belief = { git = "https://github.com/SuperInstance/hodge-belief-rs", optional = true }
ergodic-transport = { git = "https://github.com/SuperInstance/ergodic-transport-rs", optional = true }
evolving-sheaf = { git = "https://github.com/SuperInstance/evolving-sheaf-rs", optional = true }

[features]
default = []
trending = ["dep:chrono", "dep:reqwest", "dep:tempfile"]
griot-history = []
math-tools = ["dep:nalgebra"]
module-system = []
context-triggers = ["griot-history", "math-tools"]

metal-libs = ["spectral-graph-agent", "conservation-spectral-topology", "sheaf-agents", "hodge-belief", "ergodic-transport", "evolving-sheaf"]

# Compile the context trigger engine with all detectors.
# Enables all feature-dependent modules: griot-history, math-tools.
